--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,6 +41,22 @@ a{
     font-size: 6.2rem;
     line-height: 7.2rem;
 }
+.heading.lv2{
+    font-size: 4.2rem;
+    line-height: 5.6rem;
+}
+.comment{
+    font-weight: 700;
+    font-size: 1.2rem;
+    line-height: 1.8rem;
+    color: rgba(118, 126, 126, 1);
+}
+.line-clamp{
+    display: -webkit-box;
+    -webkit-line-clamp: var(--line-clamp, 1);
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+}
 /* header */
 
 .header.fixed{
@@ -245,4 +261,156 @@ nav ul li a:hover{
     line-height: 33px;
     text-align: center;
     color: rgba(255, 255, 255, 1);
+}
+/* features */
+.features{
+    padding: 130px 0 65px;
+}
+.features .heading{
+    width: 50%;
+}
+.features .desc-main{
+    font-weight: 400;
+    font-size: 1.8rem;
+    line-height: 2.7rem;
+    color: rgba(118, 126, 126, 1);
+    width: 52%;
+    margin-top: 18px;
+}
+.features .features-list{
+    display: flex;
+    margin-top: 80px;
+    gap: 200px;
+}
+.features .features-list .item:first-child{
+    width: 15%;
+    margin-right: 9px;
+}
+.features .features-list .item{
+    width: 20%;
+}
+.features .features-list .item .frame{
+    width: 102px;
+    height: 106px;
+    border-radius: 16px;
+    background-color: rgba(255, 193, 71, 1);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.features .features-list .item:nth-child(2) .frame{
+    background-color: rgba(255, 148, 122, 1);
+}
+.features .features-list .item:nth-child(3) .frame{
+    background-color: rgba(191, 131, 255, 1);
+}
+.features .features-list .item .title{
+    font-weight: 600;
+    font-size: 2rem;
+    line-height: 3rem;
+    color: rgba(13, 17, 17, 1);
+    margin-top: 26px;
+}
+.features .features-list .item .desc{
+    font-weight: 400;
+    font-size: 1.6rem;
+    line-height: 2.7rem;
+    color: rgba(157, 166, 165, 1);
+    margin-top: 16px;
+}
+/* courses */
+.courses{
+    padding: 65px 0 132.5px;
+}
+.courses .row{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 19px;
+}
+.courses .row .desc{
+    font-weight: 400;
+    font-size: 1.8rem;
+    line-height: 3.2rem;
+    color: rgba(118, 126, 126, 1);
+    width: 48%;
+}
+.courses .row .link{
+    font-weight: 700;
+    font-size: 1.4rem;
+    color: rgba(30, 191, 193, 1);
+}
+.courses .row .link:hover{
+    text-decoration: underline;
+}
+.courses .list{
+    margin-top: 79px;
+    display: flex;
+    gap: 47px;
+}
+.courses .list .item{
+    flex: 1;
+    position: relative;
+}
+.courses .list .item .thumb{
+    width: 100%;
+    height: 393px;
+    object-fit: cover;
+    opacity: 65%;
+    border-radius: 8px;
+}
+.courses .list .item .body{
+    position: absolute;
+    width: 308px;
+    top: 322px;
+    left: 17px;
+    border-radius: 8px;
+    box-shadow: 0px 16px 90px rgba(0, 0, 0, 0.05);
+    background-color: rgba(255, 255, 255, 1);
+    padding: 18px 35px 29px 25px;
+}
+.courses .list .item .body .title a{
+    font-weight: 700;
+    font-size: 2.2rem;
+    line-height: 3.3rem;
+    color: rgba(13, 17, 17, 1);
+}
+.courses .list .item .body .price{
+    font-weight: 400;
+    font-size: 1.6rem;
+    line-height: 2.4rem;
+    margin-top: 16px;
+}
+.courses .list .item .body .price strong{
+    font-weight: 700;
+    font-size: 2.2rem;
+    line-height: 3.3rem;
+}
+.courses .list .item .body .desc{
+    font-weight: 400;
+    font-size: 1.4rem;
+    line-height: 2.1rem;
+    color: rgba(157, 166, 165, 1);
+    margin-top: 6px;
+}
+.courses .list .item .body .info{
+    display: flex;
+}
+.courses .list .item .body .info .label{
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.4rem;
+    color: rgba(157, 166, 165, 1);
+    margin-top: 18px;
+}
+.courses .list .item .body .info .label::before{
+    content: "";
+    display: inline-block;
+    margin:0 10px;
+    width: 6px;
+    height: 6px;
+    border-radius: 50%;
+    background-color: rgba(30, 191, 193, 1);
 }
